syntax = "proto3";

package location;

service LocationService {
  rpc AddLocation(AddLocationRequest) returns (AddLocationResponse);
  rpc RemoveLocation(RemoveLocationRequest) returns (RemoveLocationResponse);
  rpc EditLocation(EditLocationRequest) returns (EditLocationResponse);
}

message Location {
  string id = 1;
  string task_id = 2;
  string label = 3;
  float x = 4;
  float y = 5;
  string context = 6;
}

message AddLocationRequest {
  string search = 1;
  string task_id = 2;
}
message AddLocationResponse {
  Location location = 1;
}

message RemoveLocationRequest {
  string id = 1;
}
message RemoveLocationResponse {
  Location location = 1;
}

message EditLocationRequest {
  string search = 1;
  int32 id = 2;
}
message EditLocationResponse {
  Location location = 1;
}
